--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.1",
+    "supabase": "^2.45.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
