--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.9.1",
     "supabase": "^2.45.5",
     "tailwindcss": "^4.1.13",
+    "tldraw": "^4.0.3",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
